# retro-rom-downloader

./: .gitignore  LICENSE  README.md  download_roms.py  pyproject.toml
top_lists/: genesis-top-100.txt  n64-top-50.txt  nes-top-100.txt  snes-top-100.txt  snes-top-250.txt
